# RSET2023-27-S6-ALPHA

AQI sensing/: Camera.py  Comparison.py  RealTime.py  Simulation.py  app.py
AQI sensing/sketch_mar7a/: sketch_mar7a.ino
Automated_Attendace_G18/: app.py  check.py
Automated_Attendace_G18/templates/: base.html  class_teacher.html  login.html  student.html  subject_teacher.html  teacher_hub.html
Automated_Hostel_Administration/: .gitignore  README.md  package-lock.json
Automated_Hostel_Administration/ai_engine/: genetic_engine.py
Automated_Hostel_Administration/client/: package-lock.json  package.json
ClassSense/: .gitignore  INTEGRATION.md  requirements.txt  run_student.py  start_classsense.bat
ClassSense/Frontend/: server.py
DR-PROJECT/: README.md
Das-Detects/: README.md
Group14 Hallucination Detetcion/: .gitignore  README.md  app.py  context_genarator.py  keyword_extractor.py  main.py  pyproject.toml  requirements.txt  server.py  webapp.py
Group14 Hallucination Detetcion/extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  server.js
Group14 Hallucination Detetcion/halluguard/: __init__.py
Group14 Hallucination Detetcion/halluguard/detectors/: __init__.py  factory.py  transformer.py
Group14 Hallucination Detetcion/halluguard/models/: inference.py
Group14 Hallucination Detetcion/templates/: index.html
Reco/: App.js  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json
avaaz/: .gitignore
schemesmart-ai/: package-lock.json
weatherstation/: README.md
(+157 files in other folders)
