[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halluguard"
version = "1.0.0"
description = "HalluGuard — Hallucination detection API for RAG applications."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.48.3",
    "numpy>=2.2.2",
    "flask>=3.0.0",
    "flask-cors",
    "python-dotenv",
    "keybert",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
]

[tool.setuptools.packages.find]
include = ["halluguard*"]